[package]
name = "aski-cc"
version = "0.1.0"
edition = "2021"
description = "aski compiler — Surface DB, macro expansion, aski-to-kernel pipeline"

[dependencies]
ascent = "0.8"
aski-core = { path = "../aski-core" }

[build-dependencies]
aski-rs = { path = "../aski-rs" }

[dev-dependencies]
aski-rs = { path = "../aski-rs" }
